# aims-saas-adapter-sduk-py

./: .env-example  .gitignore  .gitlab-ci.yml  .project  Dockerfile  README.md  app.py  docker-entrypoint.sh  env.py  justfile  pyproject.toml
docs/: Example tags - Event 1.pptx  File Overview Details.docx  OFFER CODES AND ASSOCIATED OFFER.xlsx  PE_FILES.md  Promo Tag Creation - Tag Types & Sources.xlsx  Promo Tag Creation - Tag Types, Sources and Rules v2.xlsx  Retalix PLU header and detail.xlsx  SD File-Store Mapping Definition - eSELs.docx  SD HHT (RI RF) Definition - eSELs.docx  SD Item File (PLU) Definition - eSELs.docx  SD Locations (BX150) File Definition - eSELs.docx  SUPERDRUG SOLUM Mapping.xlsx
docs/overlap-sample/: PE0033_PR_TST_Small_POS(Event_No_12762)_2103241135.csv  PE0033_PR_TST_Small_POS(Event_No_12765)_2003240458.csv  PE0033_PR_TST_Small_POS(Event_No_12766)_2203240754.csv  PE0033_PR_TST_Small_POS(Event_No_12767)_2203240827.csv  PE0033_PR_TST_Small_POS(Event_No_12768)_2203240915.csv  PE0033_PR_TST_Small_POS(Event_No_12775)_2003240211.csv  PE0033_PR_TST_Small_POS(Event_No_12828)_2003240134.csv  PE0033_PR_TST_Small_POS(Event_No_12966)_2103240457.csv  PE0033_PR_TST_Small_POS(Event_No_12989)_2103240229.csv
docs/templates/: Tag Types.pptx  Templates Explain.docx
modules/aims_saas/: aims_saas_api_client.py
modules/sduk/: blob.py  common.py  sduk.py
resources/: pe_file_headers.csv  pe_item_headers.csv  plu_file_headers.csv  plu_item_headers.csv
scripts/: 01-storeFilter_and_queuing.sh  push_container.sh
scripts/SD/zip_contents/: PLU763939.CSV  (+3 more)
(+2 files in other folders)
